--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cloudflared": "^0.7.0",
     "dotenv": "^16.4.7",
+    "googleapis": "^148.0.0",
     "next": "15.2.4",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
